finished content text

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="styles.css">
+  <link href='http://fonts.googleapis.com/css?family=Maven+Pro:500,900,400,700' rel='stylesheet' type='text/css'>
   <title>The Viking Store</title>
 </head>
 
@@ -16,9 +17,16 @@
     </header>
 
     <section class="content">
+
       <div class="background"></div>
+      <h2>The Best Viking Gear on the Whole Web</h2>
+      <h3>Choose from among our lineup of fine axes below</h3>
+
+      <section class="grid">
 
 
+
+      </section>
 
 
 
@@ -28,7 +36,6 @@
 
     <footer>
       <h2>CONTACT</h2>
-
       <ul>
         <li>
           <img id="phone" src="Images/phone.png">
@@ -39,11 +46,6 @@
           contact@vikingstore.com
         </li>
       </ul>
-
-
-
-
-
     </footer>
   </div>
 </body>
