finished item grid

--- a/index.html
+++ b/index.html
@@ -23,6 +23,37 @@
       <h3>Choose from among our lineup of fine axes below</h3>
 
       <section class="grid">
+        <div class="box">
+          The Silent Night
+          <img src="Images/silent_night.jpg">
+          <input type="submit" value="Add to Cart">
+        </div><!--
+        --><div class="box">
+          The Dainty Daisy
+          <img src="Images/dainty_daisy.jpg">
+          <input type="submit" value="Add to Cart">
+        </div><!--
+        --><div class="box-right">
+          Double Trouble
+          <img src="Images/double_trouble.jpg">
+          <input type="submit" value="Add to Cart">
+        </div>
+
+        <div class="box">
+          Whispering Wind
+          <img src="Images/whispering_wind.jpg">
+          <input type="submit" value="Add to Cart">
+        </div><!--
+        --><div class="box">
+          The Cunning Cutter
+          <img src="Images/cunning_cutter.jpg">
+          <input type="submit" value="Add to Cart">
+        </div><!--
+        --><div class="box-right">
+          The Kingmaker
+          <img src="Images/kingmaker.jpg">
+          <input type="submit" value="Add to Cart">
+        </div>
 
 
 
