added page navigation

--- a/index.html
+++ b/index.html
@@ -54,15 +54,25 @@
           <img src="Images/kingmaker.jpg">
           <input type="submit" value="Add to Cart">
         </div>
-
-
-
       </section>
 
-
-
-
-
+      <div class="page-nav">
+        <div class="prev">
+          <a href="#">&#60&#60 Prev</a>
+        </div>
+        <div class="numbers-left">
+          <a href="#">1</a> <a href="#">2</a> <a href="#">3</a>
+        </div>
+        <div class="elipses">
+          ...
+        </div>
+        <div class="numbers-right">
+          <a href="#">8</a> <a href="#">9</a>
+        </div>
+        <div class="next">
+          <a href="#">Next &#62&#62</a>
+        </div>
+      </div>
     </section>
 
     <footer>
@@ -74,7 +84,7 @@
         </li>
         <li>
           <img id="email" src="Images/email.png">
-          contact@vikingstore.com
+          <a href="mailto:contact@vikingstore.com">contact@vikingstore.com</a>
         </li>
       </ul>
     </footer>
