--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <header class="group">
       <h1>Viking Store</h1>
       <div class="right-head">
-        <img src="Images/empty_cart.png">
-        <p>Your Cart</p>
+        <a href="#"><img src="Images/empty_cart.png">
+        Your Cart</a>
       </div>
     </header>
 
